--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Project portfolio for Heather Hern",
   "main": "index.js",
   "dependencies": {
+    "express": "^4.17.1",
     "node": "^15.2.1"
   },
   "devDependencies": {},
